# Z-Td

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Todolist.cpp  Todolist.h  main.cpp  mainwindow.cpp  mainwindow.h
Z-Td/: todo_data.json
